--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -53,6 +53,7 @@
         src: "/tmp/prometheus-{{ prometheus_version }}.linux-{{ go_arch }}.tar.gz"
         dest: "/tmp"
         creates: "/tmp/prometheus-{{ prometheus_version }}.linux-{{ go_arch }}/prometheus"
+        remote_src: yes
       check_mode: false
 
     - name: propagate official prometheus and promtool binaries
@@ -62,6 +63,7 @@
         mode: 0755
         owner: root
         group: root
+        remote_src: yes
       with_items:
         - prometheus
         - promtool
@@ -75,6 +77,7 @@
         mode: 0644
         owner: root
         group: root
+        remote_src: yes
       with_items:
         - console_libraries
         - consoles
@@ -91,6 +94,7 @@
     mode: 0755
     owner: root
     group: root
+    remote_src: yes
   with_items:
     - prometheus
     - promtool
