--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,6 +11,13 @@ platforms:
     privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: focal
+    pre_build_image: true
+    image: quay.io/paulfantom/molecule-systemd:ubuntu-20.04
+    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
   - name: centos7
     pre_build_image: true
     image: quay.io/paulfantom/molecule-systemd:centos-7
